Cyberduck
FTP, SFTP, WebDAV, Cloud Files, Google Docs, Windows Azure & Amazon S3 Browser for Mac OS X.
http://cyberduck.ch/

Changelog. Last modified: $Date$

4.0 [http://trac.cyberduck.ch/milestone/4.0]
- [Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.
- [Feature] Connecting to Windows Azure Blob Storage (Azure) (#3938)
- [Feature] CloudFront CDN configuration with custom origin server (Amazon CloudFront & FTP, SFTP, WebDAV)
- [Feature] CloudFront CDN invalidation requests (S3) (#5197)
- [Feature] FireFTP Bookmarks Importer
- [Feature] CrossFTP Bookmarks Importer
- [Feature] S3Browser Bookmarks Importer (Windows)
- [Feature] CloudBerry Explorer for Amazon S3 Bookmarks Importer (Windows)
- [Feature] CloudBerry Explorer for Google Storage Bookmarks Importer (Windows)
- [Feature] CloudBerry Explorer for Azure Blob Storage Bookmarks Importer (Windows)
- [Bugfix] Slow SFTP transfers (#185)
- [Bugfix] Support for S3Fox directory placeholders (S3)
- [Bugfix] Support for Google Storage Console directory placeholders (S3)
- [Bugfix] Support for s3sync.rb directory placeholders (#5374) (S3)
- [Bugfix] Connect through HTTP/HTTPS proxy (#5379) (Google Docs)
- [Bugfix] Changing storage class fails (S3)
- [Bugfix] Apply ACLs recursively (S3)
- [Bugfix] Apply custom HTTP headers recursively (S3)

3.7 (Oct-21-2010) [http://trac.cyberduck.ch/milestone/3.7]
- [Feature] Option to upload with temporary name and rename file after transfer is complete (#4165)
- [Feature] Copy files between browser windows with different sessions (#21)
- [Feature] Option to display hidden files in upload prompt (#1243)
- [Feature] Import Transmit favorites (#3073)
- [Feature] Copy and open multiple URLs (#5135)
- [Feature] Support for PuTTY private key format (SFTP) (#5322)
- [Feature] Duplicate Bookmarks using drag and drop with option key
- [Feature] Display only affected files in synchronization preview (#5226)
- [Feature] Change update source to snapshot builds in Preferences