@@ -40,13 +40,14 @@
 </p>
 
 <strong><a href=
-        "http://trac.cyberduck.ch/milestone/4.0">Version 4.0</a></strong><br/>
+                   "http://trac.cyberduck.ch/milestone/4.0">Version 4.0</a></strong><br/>
 
 <ul>
     <li>[Feature] Version for Microsoft Windows XP, Windows Vista & Windows 7.</li>
     <li>[Feature] Connecting to Windows Azure Blob Storage (Azure) (<a
             href="http://trac.cyberduck.ch/ticket/3938">#3938</a>)
     </li>
+    <li>[Feature] Connecting to Swift Storage (Openstack)</li>
     <li>[Feature] CloudFront CDN invalidation requests (S3) (<a
             href="http://trac.cyberduck.ch/ticket/5197">#5197</a>)
     </li>
@@ -57,6 +58,9 @@
     <li>[Feature] CloudBerry Explorer for Amazon S3 Bookmarks Importer (Windows)</li>
     <li>[Feature] CloudBerry Explorer for Google Storage Bookmarks Importer (Windows)</li>
     <li>[Feature] CloudBerry Explorer for Azure Blob Storage Bookmarks Importer (Windows)</li>
+    <li>[Feature] Perform MD5 hash calculation during upload (<a
+            href="http://trac.cyberduck.ch/ticket/185">#5186</a>) (S3, Cloudfiles)
+    </li>
     <li>[Bugfix] Slow SFTP transfers (<a
             href="http://trac.cyberduck.ch/ticket/185">#185</a>)
     </li>
@@ -74,10 +78,26 @@
     <li>[Bugfix] Changing storage class fails (S3)</li>
     <li>[Bugfix] Apply ACLs recursively (S3)</li>
     <li>[Bugfix] Apply custom HTTP headers recursively (S3)</li>
+    <li>[Bugfix] Show last access timestamp in history (<a
+            href="http://trac.cyberduck.ch/ticket/3805">#3805</a>)
+    </li>
+    <li>[Bugfix] Interoperability (<a
+            href="http://trac.cyberduck.ch/ticket/2609">#2609</a>, <a
+            href="http://trac.cyberduck.ch/ticket/4231">#4231</a>) (WebDAV)
+    </li>
+    <li>[Bugfix] SSL version number incompatibility (<a
+            href="http://trac.cyberduck.ch/ticket/5061">#5061</a>)
+    </li>
+    <li>[Bugfix] Display decimal file size (10.6) (<a
+            href="http://trac.cyberduck.ch/ticket/3771">#3771</a>)
+    </li>
+    <li>[Bugfix] Preserve upload modification date does not work for folders (<a
+            href="http://trac.cyberduck.ch/ticket/3017">#3017</a>)
+    </li>
 </ul>
 
 <strong><a href=
-        "http://trac.cyberduck.ch/milestone/3.7">Version 3.7</a></strong><br/>
+                   "http://trac.cyberduck.ch/milestone/3.7">Version 3.7</a></strong><br/>
 
 <ul>
     <li>[Feature] Option to upload with temporary name and rename file after transfer is complete (<a
