@@ -1,7 +1,15 @@
 4.0b7 [http://trac.cyberduck.ch/milestone/4.0b7]
+- [Feature] Connecting to Swift Storage (Openstack)
 - [Feature] CloudFront CDN configuration with custom origin server (Amazon CloudFront & FTP, SFTP, WebDAV)
+- [Feature] CloudFront CDN invalidation requests (S3) (#5197)
+- [Feature] Perform MD5 hash calculation during upload (#5186) (S3, Cloudfiles)
 - [Bugfix] Apply ACLs recursively (S3)
 - [Bugfix] Apply custom HTTP headers recursively (S3)
+- [Bugfix] Show last access timestamp in history (#3805)
+- [Bugfix] Interoperability (#2609, #4231) (WebDAV)
+- [Bugfix] SSL version number incompatibility (#5061)
+- [Bugfix] Display decimal file size (10.6) #3771)
+- [Bugfix] Preserve upload modification date does not work for folders (#3017)
 
 4.0b6 [http://trac.cyberduck.ch/milestone/4.0b6]
 - [Feature] FireFTP Bookmarks Importer
